# uwc

./: .gitlab-ci.yml  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/workflows/: test.yml
src/: constants.rs  counter.rs  error.rs  input.rs  main.rs  opt.rs  ubufreader.rs
tests/: cli.rs
tests/fixtures/all_newlines/: input  output
tests/fixtures/empty/: output
tests/fixtures/empty_line_mode/: stdout
tests/fixtures/flags_bp/: opts  stdout
tests/fixtures/flags_cl/: opts  stdout
tests/fixtures/flags_w/: input  stdout
tests/fixtures/hello/: output
tests/fixtures/i_can_eat_glass/: output
tests/fixtures/i_can_eat_glass_multi/: input_turkish  input_vietnamese_nfc  input_vietnamese_nfd  stdout
tests/fixtures/ladle_rat_rotten_hut/: output  stdout
tests/fixtures/ladle_rat_rotten_hut_line_mode/: input_english  input_hebrew  opts  output  stdout
tests/fixtures/ladle_rat_rotten_hut_line_mode_chunk_size/: README.md  input_bengali  opts  stdout
tests/fixtures/ladle_rat_rotten_hut_line_mode_count_newlines/: opts  output  stdout
tests/fixtures/line_mode/: input  output
tests/fixtures/line_mode_all_newlines/: opts  stdout
tests/fixtures/line_mode_all_newlines_count_newlines/: stdout
tests/fixtures/line_mode_no_trailing_newline/: input  output
tests/fixtures/line_mode_no_trailing_newline_count_newlines/: opts  output
tests/fixtures/partial_shift_jis/: README.md  input  stdout
tests/fixtures/shift_jis/: input  stderr
