[package]
authors = ["Skyler Hawthorne <skyler@dead10ck.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "Counts things in unicode text files"
edition = "2018"
keywords = ["wc", "unicode", "word", "count"]
license = "MPL-2.0"
name = "uwc"
readme = "README.md"
repository = "https://gitlab.com/dead10ck/uwc"
version = "1.0.6-dev"

[badges]
[badges.gitlab]
branch = "master"
repository = "dead10ck/uwc"

[dependencies]
env_logger = "0.8.3"
failure = "0.1.8"
itertools = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.14"
rayon = "1.5.1"
regex = "1.5.4"
structopt = "0.3.21"
structopt-derive = "0.4.14"
tabwriter = "1.2.1"
unicode-segmentation = "1.7.1"

[profile]
[profile.release]
lto = true
