[package]
authors = ["Skyler Hawthorne <skyler@dead10ck.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "Counts things in unicode text files"
edition = "2018"
keywords = ["wc", "unicode", "word", "count"]
license = "MPL-2.0"
name = "uwc"
readme = "README.md"
repository = "https://gitlab.com/dead10ck/uwc"
version = "1.0.8-alpha.1"

[badges]
[badges.gitlab]
branch = "master"
repository = "dead10ck/uwc"

[dependencies]
env_logger = "0.11.5"
failure = "0.1.8"
itertools = "0.13.0"
lazy_static = "1.5.0"
log = "0.4.22"
rayon = "1.10.0"
regex = "1.10.6"
structopt = "0.3.26"
structopt-derive = "0.4.18"
tabwriter = "1.4.0"
unicode-segmentation = "1.12.0"

[profile]
[profile.release]
lto = true
